--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,12 @@
         "nails\/common": "dev-develop"
     },
     "require-dev": {
-        "phpunit\/phpunit": "8.*"
+        "phpunit/phpunit": "9.*",
+        "phpstan/phpstan": "0.*"
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit",
+        "analyse": "./vendor/bin/phpstan analyse -c .phpstan/config.neon"
     },
     "autoload": {
         "psr-4": {
