--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "nails\/common": "dev-develop"
+        "nails\/common": "dev-feature/pre-new-admin"
     },
     "require-dev": {
         "phpunit/phpunit": "9.*",
